kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karpenter-test
  namespace: default
spec:
  # 10 Replicas x 0.5 CPU = We are demanding 5 full vCPUs from Karpenter
  replicas: 4
  selector:
    matchLabels:
      app: karpenter-test
  template:
    metadata:
      labels:
        app: karpenter-test
    spec:
      # This guarantees the pods ONLY schedule on nodes built by Karpenter
      nodeSelector:
        karpenter.sh/capacity-type: "on-demand"
        node.kubernetes.io/instance-type: "t3.small"
      containers:
      - name: nginx
        # Using Public ECR to avoid DockerHub rate limits
        image: public.ecr.aws/nginx/nginx:latest
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
